<resources>
    <string name="app_name">GoTogether</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password_demand">Длина пароля не менее 8 символов</string>
    <string name="continue_str">Продолжить</string>
    <string name="about_yourself">О себе</string>
    <string name="name">Имя</string>
    <string name="birthday">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="user_agreement">Нажатием кнопки \"Продолжить\"\n Вы принимаете условия\n <a href="http://51.15.104.77:8085/api/privacy-policy/android">Пользовательского соглашения</a></string>
    <string name="description">Описание</string>
    <string name="little_bit_about_yourself">Немного о себе</string>
    <string name="tell_about_yourself">Расскажите нам больше о себе</string>
    <string name="point_your_interests">Укажи свои интересы</string>
    <string name="this_will_help_us">Данная информация поможет нам\n подобрать мероприятие\n специально для вас</string>
    <string name="search">Поиск</string>
    <string name="find_interesting_event">Найдите интересующие мероприятия с помощью поиска</string>
    <string name="for_you">Для вас</string>
    <string name="dialogs">Диалоги</string>
    <string name="profile">Профиль</string>
    <string name="free">Бесплатно</string>
    <string name="not_mentioned">Не указано</string>
    <string name="error_message">Это поле не должно быть пустым!</string>
    <string name="passwords_must_be_equal">Пароли должны совпадать</string>
    <string name="passwords_must_be_more_than_eight_symbols">Длина пароля должна быть не менее 8 символов</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="need_to_fill_form">Необходимо будет ввести \n учетные данные</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="show_all">Показать полностью</string>
    <string name="price">Цена</string>
    <string name="age">Возраст</string>
    <string name="age_">Возраст:</string>
    <string name="eighteen_and_older">18+</string>
    <string name="when_to_go">Когда можно сходить?</string>
    <string name="who_will_go">Кто пойдет?</string>
    <string name="who_will_go_with_you">Кто пойдет с вами?</string>
    <string name="find_error">Нашли ошибку? \n <u>Сообщите нам</u></string>
    <string name="complain">Пожаловаться</string>
    <string name="where">Где проводится?</string>
    <string name="send">Отправить</string>
    <string name="special_for_you">Специально для вас</string>
    <string name="participants_appbar_text">Посмотрите, кто ещё хочет посетить данное мероприятие</string>
    <string name="roll_up">Свернуть</string>
    <string name="events_search">Поиск мероприятий</string>
    <string name="search_parameters">Параметры поиса</string>
    <string name="cost">Стоимость</string>
    <string name="distance">Расстояние</string>
    <string name="event_type">Вид мероприятия</string>
    <string name="apply">Применить</string>
    <string name="clear">Очистить</string>
    <string name="user_profile">Страница пользователя</string>
    <string name="about_me">Обо мне</string>
    <string name="events">Мероприятия</string>
    <string name="change"><u>Изменить</u></string>
    <string name="interests"><u>Интересы</u></string>
    <string name="save">Сохранить</string>
    <string name="no_description">Вы пока ничего не рассказали другим о себе</string>
    <string name="edit">Редактировать</string>
    <string name="type_message">Написать сообщение</string>
    <string name="recommend_people">Рекомендуем вам пойти с ними</string>
    <string name="place_not_defined">Место не указано</string>
    <string name="dialogs_stub_title">Вы никому не писали</string>
    <string name="dialogs_stub_subtitle">Найдите интересующее мероприятие и напишите другому пользователю</string>
    <string name="search_stub_title">Ничего не найдено</string>
    <string name="search_stub_subtitle">Попробуйте искать по-другому</string>
    <string name="about_me_placeholder">Вы пока ничего не рассказали другим о себе</string>
    <string name="wrong_format">Неправильный формат даты!</string>
    <string name="type_in_date_format">Введите дату в формате "ДД.ММ.ГГГГ"</string>
    <string name="date_format">ДД.ММ.ГГГГ</string>

    <string-array name="interests">
        <item>Бизнес и образование</item>
        <item>Танцы</item>
        <item>Театр и кино</item>
        <item>Выставки и искусство</item>
        <item>Юмор</item>
        <item>Концерты и фестивали</item>
        <item>Мода</item>
        <item>Игры, квесты</item>
        <item>Романтика</item>
        <item>Активный отдых</item>
    </string-array>

    <string-array name="categories">
        <item>businesObrazovanie</item>
        <item>teatrKino</item>
        <item>tanciBalli</item>
        <item>vecherinkiShou</item>
        <item>vistavkiTvorchestvo</item>
        <item>umor</item>
        <item>koncertiFestivali</item>
        <item>moda</item>
        <item>igriKvesti</item>
        <item>romantika</item>
        <item>activniyOtdih</item>
    </string-array>

    <string-array name="sex">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>