<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_bold"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:fontFamily="@font/exo_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/exo"
            android:gravity="center"
            android:text="@string/need_to_fill_form"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/exo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                style="@style/OutlinedButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:fontFamily="@font/exo" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/exo"
                android:text="@string/exit"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:fontFamily="@font/exo" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>


