<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/exo_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:fontFamily="@font/exo_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/start_enter_btn"
        style="@style/OutlinedButton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/exo"
        app:fontFamily="@font/exo"
        android:text="@string/enter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registration_btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/exo"
        app:fontFamily="@font/exo"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/start_enter_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>